--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -1,1 +1,7 @@
 @charset "utf-8";
+
+@mixin backgroundSort($position) {
+    background-position: $position;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
